<resources>
    <string name="app_name">My Shop</string>
    <string name="app_version">Version 1.0</string>
    <string name="lbl_welcome_title">Take a first step for</string>
    <string name="lbl_welcome_subtitle">Atmanirbhar Bharat</string>
    <string name="lbl_welcome_desc">We encourage you to bring your shop online and reach maximum people in your area.</string>
    <string name="lbl_know_more">Know more</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_new_register">New Register</string>
    <string name="lbl_available_in_your_area">available in your area</string>
    <string name="lbl_check_detail_of_delivery_boy">Before handing over goods, please cross check detail of delivery boy.</string>
    <string name="lbl_delivery_boy_name">Ravi shankar</string>
    <string name="lbl_hire">Hire</string>
    <string name="lbl_less_than_km">Rs 15/ less then km</string>
    <string name="lbl_more_than_km">Rs 25/ more then km</string>
    <string name="lbl_error_title">Rejected</string>
    <string name="lbl_error_description">Ravi shankar rejected your request</string>
    <string name="lbl_ok">OK</string>
    <string name="lbl_order_need_to_be_delivered">Order need to be delivered</string>
    <string name="lbl_delivery_address">Raj Desai -  Pushpa Vatika B101</string>
    <string name="lbl_delivery_type">Home Delivery</string>
    <string name="lbl_payment_status">Payment :- Received</string>
    <string name="lbl_delivery_status">Accepted</string>
    <string name="lbl_done">Done</string>
    <string name="lbl_you_have_hired">You have Hired</string>
    <string name="lbl_aadhar_card">Aadhaar card no.:</string>
    <string name="lbl_aadhar_card_number">981928922891229</string>
    <string name="lbl_driving_license">Driving License:</string>
    <string name="lbl_driving_license_number">981928922891229</string>
    <string name="lbl_amount_to_be_paid">Amount to be Paid</string>
    <string name="lbl_rupee_symbol">₹ </string>
    <string name="lbl_delivery_amount">150</string>
    <string name="lbl_i_acknowledge">I acknowledge</string>
    <string name="lbl_raise_complaint">Raise Complaint</string>
    <string name="lbl_pay_150">Pay 150</string>
    <string name="lbl_not_delivered">not delivered</string>
    <string name="lbl_delivered">delivered</string>
    <string name="lbl_active">Active</string>
    <string name="lbl_deactive">Deactive</string>
    <string name="lbl_hire_delivery_boy">Hire Delivery Boy</string>
    <string name="lbl_date">3/3/21</string>
    <string name="lbl_time">06:34 pm</string>
    <string name="lbl_order_status">Pending</string>
    <string name="lbl_registration_desc">Join us and bring your shop online. Accept order online and increase your reach of customer.</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_mobile_number">Mobile Number</string>
    <string name="lbl_business_name">Business Name</string>
    <string name="lbl_business_category">Business Category</string>
    <string name="lbl_type_of_business">Type of Business</string>
    <string name="lbl_delivery">Delivery</string>
    <string name="lbl_service_place">Service Place</string>
    <string name="lbl_define_the_area">Define the area (Km)</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_confirm_password">Confirm Password</string>
    <string name="lbl_referral_code_optional">Referral Code (Optional)</string>
    <string name="lbl_next">Next</string>
    <string name="lbl_payment_mode">Payment Mode -  </string>
    <string name="lbl_payment_mode_value">Received Online</string>
    <string name="lbl_delivery_status_text">Delivery Status -  </string>
    <string name="lbl_delivery_status_value">Pending</string>
    <string name="lbl_rejected">Reject</string>
    <string name="lbl_accept">Accept</string>
    <string name="lbl_1">1.</string>
    <string name="lbl_dove_soap">Dove soap</string>
    <string name="lbl_150gm">150gm</string>
    <string name="lbl_1pp">1pp</string>
    <string name="lbl_50">50/-</string>
    <string name="lbl_promote_your_shop">Promote your shop</string>
    <string name="lbl_my_profile">My Profile</string>
    <string name="lbl_my_advertisement">My advertisement</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_my_rewards">My Rewards</string>
    <string name="lbl_contact_us">Contact Us</string>
    <string name="lbl_notifications">Notification</string>
    <string name="lbl_reset_password">Reset Password</string>
    <string name="lbl_write_to_us">Write to Us</string>
    <string name="lbl_enter_email_address">Enter email address</string>
    <string name="lbl_send_us">Send Us</string>
    <string name="lbl_rate_us">Rate Us</string>
    <string name="lbl_active_customer">Active Customer</string>
    <string name="nxt2me_gmail_com">Nxt2me@gmail.com</string>
    <string name="lbl_society_name">Society name</string>
    <string name="lbl_flat_number">Flat Number</string>
    <string name="lbl_mobile_number_value">9876543210</string>
    <string name="lbl_society_name_value">Jevan shraddha</string>
    <string name="lbl_flat_number_value">Atlantic A/5009</string>
    <string name="lbl_edit_your_location">Edit your location</string>
    <string name="lbl_my_referral_code">My referral code</string>
    <string name="lbl_referral_code_value">A2b8a3ei</string>
    <string name="lbl_referral_desc_1">Share your referral code with your friends/ shopkeeper and ask them to use this code while they are registering. </string>
    <string name="lbl_referral_desc_2">Earn Rs.50 point on their first purchase made through this application.</string>
    <string name="lbl_close">Close</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_enter_email_address_mobile_number">Enter Email Address / Mobile number</string>
    <string name="lbl_enter_password">Enter Password</string>
    <string name="lbl_password_hint">**********</string>
    <string name="lbl_reset_password_by_otp">Reset Password by OTP</string>
    <string name="lbl_enter_new_password">Enter new Password</string>
    <string name="lbl_confirm">Confirm</string>
    <string name="lbl_enter_otp">Enter OTP</string>
    <string name="lbl_promotion_desc">You can publish your promotion, offers and advertise your product in this application. Through this you can attarct more customers in your page.</string>
    <string name="lbl_create_big_banner">Create Big banner Advertisement in Home page</string>
    <string name="lbl_create_small_banner">Create Small banner Advertisement in Home page</string>
    <string name="lbl_launch_new_product">Launch  New Product</string>
    <string name="lbl_create_own_promotion">Create your own Promotion or offers</string>
    <string name="lbl_promotion_payment_desc">This paid service Rs. 1500/- will be charged for a week. Location of your advertisement will be on Home page. Share your content and Picture, our professional will design for you. After payment link would be generated, where you can share your requirement</string>
    <string name="lbl_pay_promotion">Pay</string>
    <string name="lbl_sample_banners">Sample banners </string>
    <string name="lbl_own_promotion_payment_desc">This paid service Rs. 500/- will be charged for a week. You can promote your offers or event. You will find your advertisement under More action button in Home page.</string>
    <string name="lbl_preview">Preview</string>
    <string name="lbl_own_promotion_event_title">Enter Event / Promotion Title</string>
    <string name="lbl_earnings_accepted">Accepted</string>
    <string name="lbl_earnings_rejected">Rejected</string>
    <string name="lbl_earnings_one_month">1 month</string>
    <string name="lbl_earnings_three_months">3 months</string>
    <string name="lbl_earnings_six_months">6 months</string>
    <string name="lbl_total_earnings">Total Earnings</string>
    <string name="lbl_total_earnings_amount">₹18000/-</string>
    <string name="lbl_hired_delivery_boy_name">Delivery boy name - %s</string>
    <string name="lbl_pay_view_delivery_boy">Pay / View</string>
    <string name="lbl_active_customer_text_1">Currently Active customers in your area are </string>
    <string name="lbl_active_customer_number">500</string>
    <string name="lbl_active_customer_text_2">Help us in increasing your customer by promoting our application. Which will help you to increase your customer base from our application.</string>
    <string name="lbl_no_advertisement_desc">You have not purchased any Advertisement or New launch. Click below to purchase any of these options you like.</string>
    <string name="lbl_advertisement_desc">Here is your advertisement. You can select Date and activate your Advertisement.</string>
    <string name="lbl_start_date">Start Date</string>
    <string name="lbl_end_date">End Date</string>
    <string name="lbl_activate">Activate</string>
    <string name="lbl_active_participation">We are looking your active participation and earn more money from our application.</string>
    <string name="lbl_encashed_points">Total encashed points are </string>
    <string name="lbl_saved_on_purchase">Total saved on Purchase </string>
    <string name="lbl_earning_from_high_flyer">Total earning from High-flyer </string>
    <string name="lbl_amount">₹ 0/-</string>
    <string name="lbl_redeem">Redeem</string>
    <string name="lbl_details">Details</string>
    <string name="lbl_joining_bonus">Joining bonus earned Point</string>
    <string name="lbl_20_pt">20 pt = ₹ 20/-</string>
    <string name="lbl_reach_500">You can redeem this point to cash once your point reachs to 500 pt or above.</string>
    <string name="lbl_enter_upi_id">Enter your UPI ID</string>
    <string name="tnc_heading">High-Flyer Terms and Condition</string>
    <string name="tnc_1">1. <b>₹200/</b> will be charged monthly as internet service charges. <b>Additional 5%</b> will be charged on transaction, if you are using our secured online payment service.</string>
    <string name="tnc_2">2. In case of any fraud or disagreement in payment or cancellation of order FST step is not responsible.</string>
    <string name="tnc_3">3. We recommend user to use our secured payment channel.</string>
    <string name="tnc_4">4. On cash transition, its responsible of shopkeeper to transfer service charge in FST step account. Incase of failure 3 reminder would be sent. Even after reminder Shopkeeper doesn\'t pay his/her account would be deactivated.</string>
    <string name="tnc_5">5. Your service will be showcased based on area defined by you.</string>
    <string name="tnc_6">6. In case of delivery boy service, you will make sure all his/her documents are matching with the uploaded documents in the application.</string>
    <string name="lbl_i_agree">I agree</string>
    <string name="lbl_create_your_menu">Create your Menu</string>
    <string name="lbl_market_price">Market Price (₹)</string>
    <string name="lbl_internet_charges">Internet charges</string>
    <string name="lbl_5_pct">5 %</string>
    <string name="lbl_discounted_pct">Discounted %</string>
    <string name="lbl_total_cost">Total Cost (₹)</string>
    <string name="lbl_product_name">Product Name</string>
    <string name="lbl_qty">Qty</string>
    <string name="lbl_plus">+</string>
    <string name="lbl_equals">=</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_add_more">Add More</string>
    <string name="lbl_add_to_menu">Add to Menu</string>
    <string name="lbl_minus">-</string>
    <string name="lbl_weight">Weight</string>
    <string name="lbl_required">Required</string>
    <string name="lbl_invalid">Invalid</string>
    <string name="lbl_password_mismatch">Passwords don\'t match</string>
    <string name="lbl_add_image">Add Image</string>
    <string name="lbl_upload_from_gallery">Upload from gallery</string>
    <string name="lbl_use_camera">Use camera</string>
</resources>