<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="6dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="26dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="16dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                >

                <include
                    android:id="@+id/toolbar"
                    layout="@layout/layout_toolbar"
                    />

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="41dp"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_marginStart="35dp"
                        android:layout_marginEnd="35dp"
                        >

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvTncHeading"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:fontFamily="@font/markformc_medium"
                            android:textColor="@color/tnc_text_color"
                            android:text="@string/tnc_heading"
                            />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvTnc1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:fontFamily="@font/markformc"
                            android:text="@string/tnc_1"
                            android:layout_marginTop="16dp"
                            android:lineSpacingExtra="5dp"
                            android:textColor="@color/tnc_text_color"
                            />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvTnc2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:fontFamily="@font/markformc"
                            android:text="@string/tnc_2"
                            android:layout_marginTop="16dp"
                            android:lineSpacingExtra="5dp"
                            android:textColor="@color/tnc_text_color"
                            />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvTnc3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:fontFamily="@font/markformc"
                            android:text="@string/tnc_3"
                            android:layout_marginTop="16dp"
                            android:lineSpacingExtra="5dp"
                            android:textColor="@color/tnc_text_color"
                            />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvTnc4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:fontFamily="@font/markformc"
                            android:text="@string/tnc_4"
                            android:layout_marginTop="16dp"
                            android:lineSpacingExtra="5dp"
                            android:textColor="@color/tnc_text_color"
                            />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvTnc5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:fontFamily="@font/markformc"
                            android:text="@string/tnc_5"
                            android:layout_marginTop="16dp"
                            android:lineSpacingExtra="5dp"
                            android:textColor="@color/tnc_text_color"
                            />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvTnc6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:fontFamily="@font/markformc"
                            android:text="@string/tnc_6"
                            android:layout_marginTop="16dp"
                            android:lineSpacingExtra="5dp"
                            android:textColor="@color/tnc_text_color"
                            />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/buttonNext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/lbl_i_agree"
                            android:fontFamily="@font/markformc_medium"
                            android:textAllCaps="false"
                            android:textSize="16sp"
                            android:layout_marginStart="45dp"
                            android:layout_marginEnd="45dp"
                            android:textColor="@color/white"
                            android:padding="10dp"
                            app:backgroundTint="@color/accent_blue"
                            app:cornerRadius="8dp"
                            android:layout_marginBottom="32dp"
                            android:layout_marginTop="42dp"
                            />

                    </LinearLayout>

                </androidx.core.widget.NestedScrollView>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>