<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="181dp"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_marginStart="15dp"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginEnd="15dp"
    android:background="@drawable/bg_dialog_error">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvErrorTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_error_title"
        android:fontFamily="@font/markformc_medium"
        android:textStyle="normal"
        android:textSize="18sp"
        android:textColor="#ec1d24"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="17dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="26dp"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvErrorDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_error_description"
        android:fontFamily="@font/markformc"
        android:textStyle="normal"
        android:textSize="14sp"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/tvErrorTitle"
        android:layout_marginTop="23dp"
        android:paddingStart="26dp"
        android:paddingEnd="14dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonOK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_ok"
        android:fontFamily="@font/markformc_medium"
        android:textStyle="normal"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:paddingBottom="10dp"
        app:backgroundTint="@color/accent_blue"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="70dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>