<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="110dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="103dp"
        android:background="@drawable/bg_delivery_boy_row"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="4dp"
        android:elevation="2dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDeliveryAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_delivery_address"
            android:fontFamily="@font/markformc"
            android:textStyle="normal"
            android:textSize="12sp"
            android:textColor="#292929"
            android:lineSpacingExtra="6sp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="19dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="12dp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDeliveryType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_delivery_type"
            android:fontFamily="@font/markformc"
            android:textStyle="normal"
            android:textSize="12sp"
            android:textColor="#292929"
            android:lineSpacingExtra="6sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="12dp"
            app:layout_constraintTop_toBottomOf="@id/tvDeliveryAddress"
            android:layout_marginTop="6dp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPaymentType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_payment_status"
            android:fontFamily="@font/markformc"
            android:textStyle="normal"
            android:textSize="12sp"
            android:textColor="#00a550"
            android:lineSpacingExtra="6sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="12dp"
            app:layout_constraintTop_toBottomOf="@id/tvDeliveryType"
            android:layout_marginTop="7dp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDeliveryStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_delivery_status"
            android:fontFamily="@font/markformc"
            android:textStyle="normal"
            android:textSize="12sp"
            android:textColor="#00adee"
            android:lineSpacingExtra="6sp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="19dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="17dp"
            />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="14dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>