<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clDesc"
            android:layout_width="match_parent"
            android:layout_height="118dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/bg_hire_delivery_boy"
            android:elevation="2dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivBackArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/back_arrow"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="26dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivMyShopLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_logo_my_shop_small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_active_customer"
                android:fontFamily="@font/markformc_medium"
                android:textStyle="normal"
                android:textSize="14sp"
                android:textColor="#404042"
                android:lineSpacingExtra="10sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="17dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_active_customer_text_1"
            android:fontFamily="@font/markformc"
            android:textStyle="normal"
            android:textSize="14sp"
            android:textColor="#404042"
            android:lineSpacingExtra="10sp"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@id/clDesc"
            android:layout_marginTop="31dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="28dp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvActiveCustomerCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_active_customer_number"
            android:fontFamily="@font/markformc_medium"
            android:textStyle="normal"
            android:textSize="72sp"
            android:textColor="#00a550"
            android:lineSpacingExtra="-48sp"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@id/tvText1"
            android:layout_marginTop="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lbl_active_customer_text_2"
            app:layout_constraintTop_toBottomOf="@id/tvActiveCustomerCount"
            android:fontFamily="@font/markformc"
            android:textStyle="normal"
            android:textSize="14sp"
            android:textColor="#404042"
            android:lineSpacingExtra="10sp"
            android:gravity="center_horizontal"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="28dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>